--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>DGSB</h1>
+    <h2>ダガシカシバット株式会社</h2>
     <p>This is a simple home page.</p>
     <script src="script.js"></script>
 </body>
