--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,27 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DGSB</title>
+<title>株式会社ダガシカシバット</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="fullscreen-bg">
-    <img src="path-to-your-image.jpg" alt="背景画像" class="fullscreen-bg__image">
-</div>
+	<div class="fullscreen-bg">
+		<video autoplay muted loop class="fullscreen-bg__video">
+			<source src="videos/3475_1280x720.mp4" type="video/mp4">
+		</video>
+	</div>
+	
 
-<div class="header">
-    <div class="subtitle">DGSB</div>
-    <h1>ダガシカシバット株式会社</h1>
-</div>
-
-<div class="content">
-    <p>コンテンツのテキストや画像など。</p>
-</div>
-
-<div class="footer">
-    フッターの内容
-</div>
+	<header class="header">
+		<div class="logo">
+			<img src="/static/images/image.jpg"  height="50">
+		  <h1>Dagashikashi</h1>
+		</div>
+		<nav>
+		  <ul>
+			<li><a href="#about-us">About Us</a></li>
+			<li><a href="#services">Services</a></li>
+			<li><a href="#news">News</a></li>
+			<li><a href="#contact">Contact</a></li>
+		  </ul>
+		</nav>
+	  </header>
+	  
+	  <div class="content">
+		
+		<p class="project-success">to make the project successful</p>
+		<p>小さな一歩が、偉大な歴史を刻む</p>
+	  </div>
 
 </body>
 </html>
